--- a/package.json
+++ b/package.json
@@ -24,13 +24,11 @@
     "eject": "react-scripts eject",
     "fix": "npm run -s format && npm run -s lint:fix",
     "format": "prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsx,gql,graphql,json}'",
-    "lint": "npm run -s lint:style; npm run -s lint:es",
-    "lint:fix": "npm run -s lint:style:fix && npm run -s lint:es:fix",
+    "lint": " npm run -s lint:es",
+    "lint:fix": "npm run -s lint:es:fix",
     "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:es:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:conflict": "eslint-config-prettier 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:style": "stylelint 'src/**/*.{css,less,sass,scss}'",
-    "lint:style:fix": "stylelint --fix 'src/**/*.{css,less,sass,scss}'",
     "postinstall": "typesync"
   },
   "eslintConfig": {
@@ -53,7 +51,6 @@
   },
   "devDependencies": {
     "@types/prettier": "2.4.1",
-    "@types/stylelint": "13.13.3",
     "@types/testing-library__jest-dom": "5.14.1",
     "@types/testing-library__user-event": "4.2.0",
     "@typescript-eslint/eslint-plugin": "5.1.0",
@@ -67,11 +64,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "7.0.4",
     "lint-staged": "11.2.4",
-    "prettier": "2.4.1",
-    "stylelint": "14.0.0",
-    "stylelint-config-recess-order": "2.5.0",
-    "stylelint-config-standard": "23.0.0",
-    "stylelint-order": "4.1.0"
+    "prettier": "2.4.1"
   },
   "husky": {
     "hooks": {
@@ -82,9 +75,6 @@
     "src/**/*.{js,jsx,ts,tsx}": [
       "prettier --write --loglevel=warn",
       "eslint --fix"
-    ],
-    "src/**/*.{css,less,sass,scss}": [
-      "stylelint --fix"
     ],
     "src/**/*.{gql,graphql,json}": [
       "prettier --write --loglevel=warn"
